tests/type-error/lets/Cyclic.vix
f : int
f =
  let g _ = f
  g MkUnit
